Fix image overflowing gallery screen

--- a/static/style.css
+++ b/static/style.css
@@ -23,14 +23,20 @@ main {
 	width: 100%;
 	z-index: 9999;
 }
-#gallery img {
-	display: none;
-	max-height: 100%;
-	max-width: 100%;
+#images {
+	height: 100%;
+	width: 100%;
 }
-#gallery img.current {
+#gallery #images div {
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	display: none;
+	width: 100%;
+	height: 100%;
+}
+#gallery #images div.current {
 	display: block;
-	margin: 0 auto;
 }
 input[type=search] {
 	border-bottom: 0;
